@@ -3,43 +3,56 @@ package com.example.logic_server.domain.character.service;
 import com.example.logic_server.domain.character.dto.CharacterDto;
 import com.example.logic_server.domain.character.entity.CharacterEntity;
 import com.example.logic_server.domain.character.repository.CharacterRepository;
-import com.example.logic_server.global.kafka.producer.CharacterProducer;
+import com.example.logic_server.global.kafka.producer.SearchProducer;
+import com.example.logic_server.global.sse.SseRegistry;
+import tools.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-import java.util.List;
-import java.util.stream.Collectors;
+import org.springframework.web.servlet.mvc.method.annotation.SseEmitter;
 
+import java.util.List;
+
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class CharacterService {
+
     private final CharacterRepository characterRepository;
-    private final CharacterProducer characterProducer;
+    private final SearchProducer searchProducer;
+    private final SseRegistry sseRegistry;
+    private final ObjectMapper objectMapper;
 
-    public List<CharacterDto> searchAllByCharacterName(String characterName) {
-        List<CharacterEntity> character = characterRepository.findAllByCharacterName(characterName);
-        if(character.isEmpty()) {
-            characterProducer.produceCharacter("all", characterName);
-        }
-        return character.stream()
-                .map(CharacterDto::fromEntity)
-                .collect(Collectors.toList());
-    }
+    public void searchWithSse(String serverId, String name, SseEmitter emitter) {
+        List<CharacterEntity> cached = "all".equals(serverId)
+                ? characterRepository.findAllByCharacterName(name)
+                : characterRepository.findByServerIdAndCharacterName(serverId, name);
 
-    public List<CharacterDto> searchByServerIdAndCharacterName(String serverId, String characterName) {
-        List<CharacterEntity> character = characterRepository.findByServerIdAndCharacterName(serverId, characterName);
-        if(character.isEmpty()) {
-            characterProducer.produceCharacter(serverId, characterName);
+        if (!cached.isEmpty()) {
+            sendResult(emitter, cached);
+            return;
         }
 
-        return character.stream()
-                .map(CharacterDto::fromEntity)
-                .collect(Collectors.toList());
+        String correlationId = searchProducer.publishCharacterSearch(name, serverId);
+        sseRegistry.register(correlationId, emitter);
     }
 
     public List<CharacterDto> searchByAdventureName(String adventureName) {
         return characterRepository.findByAdventureName(adventureName)
                 .stream()
                 .map(CharacterDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    private void sendResult(SseEmitter emitter, List<CharacterEntity> entities) {
+        try {
+            List<CharacterDto> dtos = entities.stream().map(CharacterDto::fromEntity).toList();
+            emitter.send(SseEmitter.event()
+                    .name("result")
+                    .data(objectMapper.writeValueAsString(dtos)));
+            emitter.complete();
+        } catch (Exception e) {
+            emitter.completeWithError(e);
+        }
     }
 }
